--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,4 +12,4 @@ permissions:
 jobs:
   lint_and_test:
     steps:
-      uses: ./.github/workflows/lint_and_test.yml
+      - uses: ./.github/workflows/lint_and_test.yml
