--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -11,5 +11,6 @@ permissions:
 
 jobs:
   lint_and_test:
+    runs-on: ubuntu-latest
     steps:
       - uses: ./.github/workflows/lint_and_test.yml
