--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,8 @@ jobs:
   lint_and_test:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created }}
-    uses: ./.github/workflows/lint_and_test.yml
+    uses: ./.github/actions/lint_and_test.yml
 
   package:
     needs: lint_and_test
-    uses: ./.github/workflows/package.yml
+    uses: ./.github/actions/package.yml
