chore(checkstyle-fixes): Fix actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,8 +26,10 @@ jobs:
   lint_and_test:
     needs: release-please
     if: ${{ needs.release-please.outputs.release_created }}
-    uses: ./.github/actions/lint-and-test/action.yml@main
+    uses: ./.github/actions/lint-and-test/action.yml
+    with: {}
 
   package:
     needs: lint_and_test
-    uses: ./.github/actions/package/action.yml@main
+    uses: ./.github/actions/package/action.yml
+    with: {}
