--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,4 +13,7 @@ jobs:
   lint_and_test:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+      - uses: actions/checkout@v4
+
       - uses: ./.github/actions/lint_and_test/action.yml
