chore(checkstyle-fixes): Fix actions

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -12,10 +12,14 @@ permissions:
 jobs:
   lint_and_test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java: [ '8', '11', '17', '21' ]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Run custom lint-and-test action
         uses: ./.github/actions/lint-and-test
-        with: {}
+        with:
+          java-version: ${{ matrix.java }}
