--- a/.github/actions/lint-and-test/action.yml
+++ b/.github/actions/lint-and-test/action.yml
@@ -1,21 +1,24 @@
-name: Lint and Test
-description: Lint and Test
-runs:
-  using: ubuntu-latest
-  strategy:
-    matrix:
-      java: [ '8', '11', '17', '21' ]
+name: "Lint and Test"
+description: "Runs linting and tests"
+inputs:
+  java-version:
+    description: "Java version"
+    required: false
+    default: "11"
 
+runs:
+  using: "composite"
   steps:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Setup java
+    - name: Setup Java
       uses: actions/setup-java@v4
       with:
         distribution: 'corretto'
-        java-version: ${{ matrix.java }}
+        java-version: ${{ inputs.java-version }}
         cache: 'maven'
 
     - name: Build with Maven
       run: mvn -B install --file pom.xml
+      shell: bash
