--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,8 +16,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - uses: google-github-actions/release-please-action@v3
-        id: release
+      - release-please:
+        runs-on: ubuntu-latest
+        uses: googleapis/release-please-action@v4
         with:
           command: manifest
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
