--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - release-please:
-        runs-on: ubuntu-latest
-        uses: googleapis/release-please-action@v4
+      - uses: googleapis/release-please-action@v4
         with:
           command: manifest
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
