--- a/.github/actions/package/action.yml
+++ b/.github/actions/package/action.yml
@@ -1,4 +1,14 @@
 name: Pacakge
+inputs:
+  token:
+    description: "Github token with package credentials"
+    required: true
+    default: ""
+  user:
+    description: "Github user with package credentials"
+    required: true
+    default: ""
+
 runs:
   using: ubuntu-latest
   strategy:
@@ -16,5 +26,23 @@ runs:
         java-version: ${{ matrix.java }}
         cache: 'maven'
 
-    - name: Build with Maven
-      run: mvn -B install --file pom.xml
+    - name: Configure Maven settings
+      run: |
+        mkdir -p ~/.m2
+        cat > ~/.m2/settings.xml <<EOL
+        <settings>
+          <activeProfiles>
+            <activeProfile>github</activeProfile>
+          </activeProfiles>
+          <servers>
+            <server>
+              <id>github</id>
+              <username>${{ github.actor }}</username>
+              <password>${{ secrets.GITHUB_TOKEN }}</password>
+            </server>
+          </servers>
+        </settings>
+        EOL
+
+    - name: Publish package
+      run: mvn --batch-mode deploy
