--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,24 +44,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure Maven settings
-        run: |
-          mkdir -p ~/.m2
-          cat > ~/.m2/settings.xml <<EOL
-          <settings>
-            <activeProfiles>
-              <activeProfile>github</activeProfile>
-            </activeProfiles>
-            <servers>
-              <server>
-                <id>github</id>
-                <username>${{ github.actor }}</username>
-                <password>${{ secrets.GITHUB_TOKEN }}</password>
-              </server>
-            </servers>
-          </settings>
-          EOL
-
       - name: Run custom lint-and-test action
         uses: ./.github/actions/package
-        with: { }
+        with:
+          user: {{github.actor}}
+          token: {{secrets.GITHUB_TOKEN}}
