ci(#2): Fix release and deployment pipelines

--- a/.github/actions/lint-and-test/action.yml
+++ b/.github/actions/lint-and-test/action.yml
@@ -7,7 +7,7 @@ inputs:
     default: "11"
 
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Checkout
       uses: actions/checkout@v4
