--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
         uses: googleapis/release-please-action@v4
         with:
           command: manifest
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+          token: ${{ secrets.TOKEN }}
           default-branch: main
 
     outputs:
@@ -50,4 +50,4 @@ jobs:
         uses: ./.github/actions/package
         with:
           user: ${{ github.actor }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.TOKEN }}
