--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-tools-api</artifactId>
             <version>3.12.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Maven Plugin Annotations -->
