--- a/src/test/resources/pom.xml
+++ b/src/test/resources/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.anyproject</groupId>
     <artifactId>test-plugin</artifactId>
-    <version>0.0.5</version>
+    <version>0.0.6-SNAPSHOT</version>
 
     <repositories>
         <repository>
